// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component action negative 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-12s927w znlu3l-1qr77c8 znlu3l-5n5obt znlu3l-18jpc09"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-1iooa9 znlu3l-r3cqrx znlu3l-11hczkh znlu3l-197pp75"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action positive 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-10v7flk znlu3l-1qr77c8 znlu3l-5n5obt znlu3l-15m3xlk"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-111om69 znlu3l-r3cqrx znlu3l-11hczkh znlu3l-1tthglh"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action primary 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="4zwwcu-6gd0e6 4zwwcu-58zsu5 4zwwcu-1qr77c8 4zwwcu-5n5obt 4zwwcu-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr 4zwwcu-1996vl6 4zwwcu-7s6zs0 4zwwcu-r3cqrx 4zwwcu-11hczkh 4zwwcu-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action secondary 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="znlu3l-6gd0e6 znlu3l-1wlduvr znlu3l-1qr77c8 znlu3l-5n5obt znlu3l-14bfgb"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr znlu3l-1996vl6 znlu3l-d2mlpl znlu3l-r3cqrx znlu3l-11hczkh znlu3l-1xgarii"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size lg 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="4zwwcu-6gd0e6 4zwwcu-58zsu5 4zwwcu-1qr77c8 4zwwcu-168ejle 4zwwcu-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr 4zwwcu-1996vl6 4zwwcu-7s6zs0 4zwwcu-r3cqrx 4zwwcu-16we7vb 4zwwcu-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size md 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="4zwwcu-6gd0e6 4zwwcu-58zsu5 4zwwcu-1qr77c8 4zwwcu-5n5obt 4zwwcu-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr 4zwwcu-1996vl6 4zwwcu-7s6zs0 4zwwcu-r3cqrx 4zwwcu-11hczkh 4zwwcu-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size sm 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="4zwwcu-6gd0e6 4zwwcu-58zsu5 4zwwcu-1qr77c8 4zwwcu-k1vcwv 4zwwcu-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr 4zwwcu-1996vl6 4zwwcu-7s6zs0 4zwwcu-r3cqrx 4zwwcu-1q2dyj6 4zwwcu-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size xl 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="4zwwcu-6gd0e6 4zwwcu-58zsu5 4zwwcu-1qr77c8 4zwwcu-5kwyn3 4zwwcu-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr 4zwwcu-1996vl6 4zwwcu-7s6zs0 4zwwcu-r3cqrx 4zwwcu-1cd3x4v 4zwwcu-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size xs 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="4zwwcu-6gd0e6 4zwwcu-58zsu5 4zwwcu-1qr77c8 4zwwcu-14msekw 4zwwcu-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr 4zwwcu-1996vl6 4zwwcu-7s6zs0 4zwwcu-r3cqrx 4zwwcu-7r3sa2 4zwwcu-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant link 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="4zwwcu-6gd0e6 4zwwcu-58zsu5 4zwwcu-1jps7nv 4zwwcu-5n5obt 4zwwcu-14xikch"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr 4zwwcu-1996vl6 4zwwcu-7s6zs0 4zwwcu-11hczkh"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant outline 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="4zwwcu-6gd0e6 4zwwcu-58zsu5 4zwwcu-1cqu5g 4zwwcu-5n5obt 4zwwcu-4s28py"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr 4zwwcu-1996vl6 4zwwcu-7s6zs0 4zwwcu-11hczkh"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant solid 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1mk50wr-1q64x7k 14bja7p-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="y9czwk-1hh0pc0 14bja7p-1q64x7k yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="y9czwk-1hh0pc0"
      dir={null}
    >
      <div
        className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
        data-style="4zwwcu-6gd0e6 4zwwcu-58zsu5 4zwwcu-1qr77c8 4zwwcu-5n5obt 4zwwcu-upz7x2"
        dir={null}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="css-text-1rynq56"
          data-style="19n9yv0-4du8hr 4zwwcu-1996vl6 4zwwcu-7s6zs0 4zwwcu-r3cqrx 4zwwcu-11hczkh 4zwwcu-1b07oxx"
          dir="auto"
        >
          Button
        </div>
      </div>
    </div>
  </div>
</div>
`;
